Ensured satisfactory colour contrast on all text.

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$primary: #167cc0;
+$primary: #115B8D;
 $nav-link-padding-y: 1.5rem;
 $navbar-light-active-color: $primary;
 $font-family-base: Raleway, sans-serif;
